updated modal with resized image via css, it all fits in one view now

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
     <!--opening modal with disclaimer-->
     <div class="modal is-active">
       <div class="modal-background">
-        <div class="modal-content has-background-white py-5 px-5">
-          <img class="has-image-centered" src="./assets/Leo Dollar Bill.jpg"
+        <div class="modal-content has-background-warning py-5 px-5">
+          <img class="has-image-centered" id="leo-pic" src="./assets/Leo Dollar Bill.jpg"
             alt="Wolf of Wall Street Leo(holding dollar)">
-          <h3 class="title mb-6 has-text-centered">Disclaimer!</h3>
+          <h1 class="has-text-centered has-text-weight-bold">Disclaimer!</h1>
           <p>This site was made strictly to provide information. It was built as a demonstration of technical skills
-            obtained through the UNC Coding Bootcamp. Trade scrictly at your own risk.</p>
+            obtained through the UNC Coding Bootcamp. Trade strictly at your own risk. This is not financial advice.</p>
           <button id="modal-x-btn" class="delete" aria-label="delete"></button>
         </div>
       </div>
