made modal delete button bigger

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <h1 class="has-text-centered has-text-weight-bold">Disclaimer!</h1>
           <p>This site was made strictly to provide information. It was built as a demonstration of technical skills
             obtained through the UNC Coding Bootcamp. Trade strictly at your own risk. This is not financial advice.</p>
-          <button id="modal-x-btn" class="delete" aria-label="delete"></button>
+          <button id="modal-x-btn" class="delete is-large" aria-label="delete"></button>
         </div>
       </div>
     </div>
