made scroll-container have mt-0 to remove the extra white-space above the ticker

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
   <!--dynamically generated ticker animation with top 20 cryptos from API call, scrolling animation-->
   <footer class="footer">
-    <div class="content is-fullwidth has-background-black" id="scroll-container">
+    <div class="content mt-0 is-fullwidth has-background-black" id="scroll-container">
         <p id="scroll-text"></p>
     </div>
   </footer>
