--- a/index.html
+++ b/index.html
@@ -73,21 +73,14 @@
     <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
       <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡">Contact Us!</a>
     </section>
-  
-
-    <!--Coin name and icon is generated here from Search-->
-    <h1 class="mt-3 has-text-centered mb-1 startpage is-hidden"><span id="coin-name"></span></h1>
-    <figure class="image is-96x96 has-image-centered mt-2 startpage is-hidden">
-      <img class="mt-1" id="coin-image" src="">
-    </figure>
 
 
     <!--Two cards created to call the 2 APIs with the coin search and retrieve data to display here-->
     <section class="section mb-5 mt-0 pt-0 startpage is-hidden">
       <div class="container has-text-centered">
         <div class="columns">
-          <div class="column">
-            <h1 class="is-size-1 title">Crypto Data</h1>
+          <div class="column is-two-fifths">
+            <h1 class="is-size-1 title" id="left-box-title">Crypto Data</h1>
             <div class="card">
               <h2><strong><span id="symbol"></span></strong></h2>
               <div class="card-content">
@@ -99,8 +92,14 @@
               </div>
             </div>
           </div>
-          <div class="column">
-            <h1 class="is-size-1 title">Coin Info</h1>
+          <div class="column is-one-fifth" id="searched-coin">
+            <h1 class="mt-3 has-text-centered mb-5 startpage is-hidden"><span id="coin-name"></span></h1>
+            <figure class="image is-96x96 has-image-centered mt-4 pt-4 startpage is-hidden">
+              <img class="mt-1" id="coin-image" src="">
+            </figure>
+          </div>
+          <div class="column is-two-fifths">
+            <h1 class="is-size-1 title" id="right-box-title">Coin Info</h1>
             <div class="card">
               <h2><strong><span id="ranking"></span></strong></h2>
               <div class="card-content">
