adjusted padding for the new icon column so it looks better in mobile size

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
               </div>
             </div>
           </div>
-          <div class="column is-one-fifth" id="searched-coin">
-            <h1 class="mt-3 has-text-centered mb-5 startpage is-hidden"><span id="coin-name"></span></h1>
-            <figure class="image is-96x96 has-image-centered mt-4 pt-4 startpage is-hidden">
+          <div class="column is-one-fifth mb-5 pb-4" id="searched-coin">
+            <h1 class="mt-3 has-text-centered startpage is-hidden"><span id="coin-name"></span></h1>
+            <figure class="image is-96x96 has-image-centered mt-3 startpage is-hidden">
               <img class="mt-1" id="coin-image" src="">
             </figure>
           </div>
