tweaking middle column styling, still need to adjust media queries for mobile size

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <section class="section mb-5 mt-0 pt-0 startpage is-hidden">
       <div class="container has-text-centered">
         <div class="columns">
-          <div class="column is-two-fifths">
+          <div class="column is-one-third">
             <h1 class="is-size-1 title" id="left-box-title">Crypto Data</h1>
             <div class="card">
               <h2><strong><span id="symbol"></span></strong></h2>
@@ -92,13 +92,13 @@
               </div>
             </div>
           </div>
-          <div class="column is-one-fifth mb-5 pb-4" id="searched-coin">
-            <h1 class="mt-3 has-text-centered startpage is-hidden"><span id="coin-name"></span></h1>
-            <figure class="image is-96x96 has-image-centered mt-3 startpage is-hidden">
+          <div class="column is-one-third mb-5 pb-4" id="searched-coin">
+            <h1 class="mb-3 has-text-centered startpage is-hidden"><span id="coin-name"></span></h1>
+            <figure class="image is-96x96 has-image-centered mt-2 pt-2 startpage is-hidden">
               <img class="mt-1" id="coin-image" src="">
             </figure>
           </div>
-          <div class="column is-two-fifths">
+          <div class="column is-one-third">
             <h1 class="is-size-1 title" id="right-box-title">Coin Info</h1>
             <div class="card">
               <h2><strong><span id="ranking"></span></strong></h2>
