--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     </div>
     <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
-      <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡">Contact Us!</a>
+      <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡&body=Thanks for taking the time to reach out to us at Crypto Lookup. This site was built for educational purposes and remains in beta. We appreciate any feedback positive or negative! ">Contact Us!</a>
     </section>
 
 
@@ -123,7 +123,7 @@
           <img class="has-image-centered" id="leo-pic" src="./assets/Leo Dollar Bill.jpg"
             alt="Wolf of Wall Street Leo(holding dollar)">
           <h1 class="has-text-centered has-text-weight-bold">Disclaimer!</h1>
-          <p>This site was made strictly to provide information. It was built as a demonstration of technical skills
+          <p id="disclaimer">This site was made strictly to provide information. It was built as a demonstration of technical skills
             obtained through the UNC Coding Bootcamp. Trade strictly at your own risk. This is not financial advice.</p>
           <button id="modal-x-btn" class="delete is-large" aria-label="delete"></button>
         </div>
