Crypto Lookup, Stats, Overview

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="hero-body">
         <div class="container">
           <div class="titleWrapper">
-            <h1 class="title has-text-centered" id="pageTitle">Crypto Stats Lookup</h1>
+            <h1 class="title has-text-centered" id="pageTitle">Crypto Lookup</h1>
             <h2 class="subtitle has-text-centered" id="date-time"></h2>
           </div>
         </div>
@@ -80,7 +80,7 @@
       <div class="container has-text-centered">
         <div class="columns" id="columns-container">
           <div class="column is-one-third" id="data-card-column">
-            <h1 class="is-size-1 title" id="left-box-title">Crypto Data</h1>
+            <h1 class="is-size-1 title" id="left-box-title">Stats</h1>
             <div class="card">
               <h2><strong><span id="symbol"></span></strong></h2>
               <div class="card-content">
@@ -99,7 +99,7 @@
             </figure>
           </div>
           <div class="column is-one-third" id="info-card-column">
-            <h1 class="is-size-1 title" id="right-box-title">Coin Info</h1>
+            <h1 class="is-size-1 title" id="right-box-title">Overview</h1>
             <div class="card">
               <h2><strong><span id="ranking"></span></strong></h2>
               <div class="card-content">
