formatted all docs and changed font on iphone to hopefully correctly display search for new coin

--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
     <!-- don't change these tags to semantic, bulma needs divs for the form-->
     <div class="field has-addons" id="search-form">
       <div class="has-text-centered control is-expanded">
-          <input class="input is-large" id="new-coin" type="text" autocomplete="off" placeholder="Search for a Coin">
+        <input class="input is-large" id="new-coin" type="text" autocomplete="off" placeholder="Search for a Coin">
       </div>
       <div class="control">
-          <button class="button is-large" id="search-btn">Search</button>
+        <button class="button is-large" id="search-btn">Search</button>
       </div>
     </div>
     <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
-      <a class=""id="contact-us" href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡&body=Thanks for taking the time to reach out to us at Crypto Lookup. This site was built for educational purposes and remains in beta. We appreciate any feedback positive or negative! ">Contact Us!</a>
+      <a class="" id="contact-us"
+        href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡&body=Thanks for taking the time to reach out to us at Crypto Lookup. This site was built for educational purposes and remains in beta. We appreciate any feedback positive or negative! ">Contact
+        Us!</a>
     </section>
 
 
@@ -123,7 +125,8 @@
           <img class="has-image-centered" id="leo-pic" src="./assets/Leo Dollar Bill.jpg"
             alt="Wolf of Wall Street Leo(holding dollar)">
           <h1 class="has-text-centered has-text-weight-bold">Disclaimer!</h1>
-          <p id="disclaimer">This site was made strictly to provide information. It was built as a demonstration of technical skills
+          <p id="disclaimer">This site was made strictly to provide information. It was built as a demonstration of
+            technical skills
             obtained through the UNC Coding Bootcamp. Trade strictly at your own risk. This is not financial advice.</p>
           <button id="modal-x-btn" class="delete is-large" aria-label="delete"></button>
         </div>
@@ -135,7 +138,7 @@
   <!--dynamically generated ticker animation with top 20 cryptos from API call, scrolling animation-->
   <footer class="footer">
     <div class="content mt-0 is-fullwidth has-background-black" id="scroll-container">
-        <p id="scroll-text"></p>
+      <p id="scroll-text"></p>
     </div>
   </footer>
 
