changed Contact Us location, changed styling on search bar for rounded edges on ends.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
         <button class="button is-large" id="search-btn">Search</button>
       </div>
     </div>
-    <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
+    <!-- <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
       <a class="" id="contact-us"
         href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡&body=Thanks for taking the time to reach out to us at Crypto Lookup. This site was built for educational purposes and remains in beta. We appreciate any feedback positive or negative! ">Contact
         Us!</a>
-    </section>
+    </section> -->
 
 
     <!--Two cards created to call the 2 APIs with the coin search and retrieve data to display here-->
@@ -116,8 +116,11 @@
         </div>
       </div>
     </section>
-
-
+    <!-- <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
+      <a class="" id="contact-us"
+        href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡&body=Thanks for taking the time to reach out to us at Crypto Lookup. This site was built for educational purposes and remains in beta. We appreciate any feedback positive or negative! ">Contact
+        Us!</a>
+    </section> -->
     <!--opening modal with disclaimer-->
     <div class="modal is-active">
       <div class="modal-background">
@@ -134,7 +137,11 @@
     </div>
 
   </main>
-
+  <section class="is-fullwidth has-text-centered mb-5" id="contact-us-container">
+    <a class="" id="contact-us"
+      href="mailto: CryptoLookUp@yahoo.com?subject=Crypto Lookup Future Dev Idea 💡&body=Thanks for taking the time to reach out to us at Crypto Lookup. This site was built for educational purposes and remains in beta. We appreciate any feedback positive or negative! ">Contact
+      Us!</a>
+  </section>
   <!--dynamically generated ticker animation with top 20 cryptos from API call, scrolling animation-->
   <footer class="footer">
     <div class="content mt-0 is-fullwidth has-background-black" id="scroll-container">
